--- a/views/ideas/index.handlebars
+++ b/views/ideas/index.handlebars
@@ -3,6 +3,11 @@
 <div class="card card-body mt-2">
     <h4>{{title}}</h4>
     <p>{{details}}</p>
+    <a href="/ideas/edit/{{id}}" class="btn btn-dark btn-bloack mb-2">Edit</a>
+    <form method="POST" action="/ideas/{{id}}?_method=DELETE">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" class="btn btn-danger btn-block" value="Delete">
+    </form>
 </div>
 
 {{else}}
